--- a/module2-regression-2/212_guided_project_notes.ipynb
+++ b/module2-regression-2/212_guided_project_notes.ipynb
@@ -15,6 +15,7 @@
         "257441eaef94453abb43c3b5bfd4c84d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "VBoxView",
             "_dom_classes": [
@@ -38,6 +39,7 @@
         "6b5b61a1beb54aa6a74ed2260bbe68b5": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -89,6 +91,7 @@
         "7bf65c58971e47a58031c02be129cfd2": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatSliderModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "FloatSliderView",
             "style": "IPY_MODEL_5cec0f4020d344e2b10f101ad0baabdf",
@@ -116,6 +119,7 @@
         "f273b072dc0a4dea87c636b51098af1c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatSliderModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "FloatSliderView",
             "style": "IPY_MODEL_f8665508bd8d442f8eb013e6a2232b6c",
@@ -143,6 +147,7 @@
         "fcef9847c8934b64a4b9095b7e79c042": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
+          "model_module_version": "1.0.0",
           "state": {
             "_view_name": "OutputView",
             "msg_id": "",
@@ -170,6 +175,7 @@
         "5cec0f4020d344e2b10f101ad0baabdf": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "SliderStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "handle_color": null,
@@ -185,6 +191,7 @@
         "6fababddaa554af88597944dfe418db3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -236,6 +243,7 @@
         "f8665508bd8d442f8eb013e6a2232b6c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "SliderStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "handle_color": null,
@@ -251,6 +259,7 @@
         "80d3a5028be243789d9fdad7a50b9b9e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -302,6 +311,7 @@
         "ccb550cf55b3442fa31a18d6250c003c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -375,7 +385,7 @@
         "# Library for working locally or Colab\n",
         "import sys"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -386,13 +396,13 @@
       "source": [
         "# If you're on Colab:\n",
         "if 'google.colab' in sys.modules:\n",
-        "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
+        "    DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Applied-Modeling/master/data/'\n",
         "\n",
         "# If you're working locally:\n",
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -407,13 +417,93 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8cTSdKOIMAfP"
+        "id": "8cTSdKOIMAfP",
+        "outputId": "d9d7b95b-2143-4015-8c4f-340edfd9ce3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "def wrangle(filepath):\n",
+        "  df = pd.read_csv(DATA_PATH + 'elections/bread_peace_voting.csv')\n",
+        "  df.columns = df.columns.str.upper().str.replace(' ','_')\n",
+        "  df = df.set_index('YEAR')\n",
+        "  cols_to_drop = []\n",
+        "\n",
+        "  #Drop Columns With Only One Value\n",
+        "  for col in df:\n",
+        "      if df[col].nunique() == 1:\n",
+        "        cols_to_drop.append(col)\n",
+        "\n",
+        "  #Drop Columns With High Cardinality (Too Many Categorical Variable States)\n",
+        "  high_cardinality_percentage_threshold = 0.6 #Very Subjective, Should Shrink as Dataset Gets Larger\n",
+        "  #high_cardinality_threshold = 10\n",
+        "  for col in df:\n",
+        "    if df[col].dtype == 'object': #Filter For Categorical Variables\n",
+        "      if df[col].nunique() / df.shape[0] > high_cardinality_percentage_threshold:\n",
+        "        cols_to_drop.append(col)\n",
+        "\n",
+        "  print(cols_to_drop)\n",
+        "  df = df.drop(cols_to_drop, axis=1)\n",
+        "  return df\n",
+        "\n",
         "df = wrangle(DATA_PATH + 'elections/bread_peace_voting.csv')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['INCUMBENT_PARTY_CANDIDATE', 'OTHER_CANDIDATE']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bUbZ90eh1zBN",
+        "outputId": "9fee9f1c-2821-4b13-e80f-f65d2bd2b685",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(list(df.columns)); print()\n",
+        "\n",
+        "print(df.nunique()); print()\n",
+        "\n",
+        "print(df.info()); print()"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['AVERAGE_RECENT_GROWTH_IN_PERSONAL_INCOMES', 'US_MILITARY_FATALITIES_PER_MILLION', 'INCUMBENT_PARTY_VOTE_SHARE']\n",
+            "\n",
+            "AVERAGE_RECENT_GROWTH_IN_PERSONAL_INCOMES    16\n",
+            "US_MILITARY_FATALITIES_PER_MILLION            8\n",
+            "INCUMBENT_PARTY_VOTE_SHARE                   17\n",
+            "dtype: int64\n",
+            "\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 17 entries, 1952 to 2016\n",
+            "Data columns (total 3 columns):\n",
+            " #   Column                                     Non-Null Count  Dtype  \n",
+            "---  ------                                     --------------  -----  \n",
+            " 0   AVERAGE_RECENT_GROWTH_IN_PERSONAL_INCOMES  17 non-null     float64\n",
+            " 1   US_MILITARY_FATALITIES_PER_MILLION         17 non-null     int64  \n",
+            " 2   INCUMBENT_PARTY_VOTE_SHARE                 17 non-null     float64\n",
+            "dtypes: float64(2), int64(1)\n",
+            "memory usage: 544.0 bytes\n",
+            "None\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
