--- a/module2-regression-2/212_guided_project_notes.ipynb
+++ b/module2-regression-2/212_guided_project_notes.ipynb
@@ -418,17 +418,34 @@
       "cell_type": "code",
       "metadata": {
         "id": "8cTSdKOIMAfP",
-        "outputId": "d9d7b95b-2143-4015-8c4f-340edfd9ce3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1186aa9f-a9e3-412f-b623-2b3815f0c1db"
       },
       "source": [
         "def wrangle(filepath):\n",
+        "  #The Initial Data Read In\n",
         "  df = pd.read_csv(DATA_PATH + 'elections/bread_peace_voting.csv')\n",
+        "\n",
+        "  #Subjective Wrangling Variables (to be edited)\n",
+        "  high_cardinality_percentage_threshold = 0.6 #Very Subjective, Should Shrink as Dataset Gets Larger\n",
+        "  #high_cardinality_count_threshold = 10\n",
+        "\n",
+        "  #Procedural Wrangling Variables\n",
+        "  cols_to_drop = [] #More Efficient To Only Call Drop Function Once\n",
+        "  identifier_cols = []\n",
+        "\n",
+        "  #Formatting Column Names\n",
         "  df.columns = df.columns.str.upper().str.replace(' ','_')\n",
-        "  df = df.set_index('YEAR')\n",
-        "  cols_to_drop = []\n",
+        "\n",
+        "  #Find Indentifier Variables\n",
+        "  for col in df:\n",
+        "    if df[col].nunique() == df.shape[0]:\n",
+        "      identifier_cols.append(col)\n",
+        "  df = df.set_index(identifier_cols[0])\n",
+        "  #DEFAULTS TO FIRST IDENTIFIER\n",
+        "  #OTHER IDENTIFIERS WILL BE DELETED\n",
         "\n",
         "  #Drop Columns With Only One Value\n",
         "  for col in df:\n",
@@ -436,26 +453,24 @@
         "        cols_to_drop.append(col)\n",
         "\n",
         "  #Drop Columns With High Cardinality (Too Many Categorical Variable States)\n",
-        "  high_cardinality_percentage_threshold = 0.6 #Very Subjective, Should Shrink as Dataset Gets Larger\n",
-        "  #high_cardinality_threshold = 10\n",
         "  for col in df:\n",
         "    if df[col].dtype == 'object': #Filter For Categorical Variables\n",
         "      if df[col].nunique() / df.shape[0] > high_cardinality_percentage_threshold:\n",
         "        cols_to_drop.append(col)\n",
         "\n",
-        "  print(cols_to_drop)\n",
+        "  print('DROPPED COLUMNS:', cols_to_drop)\n",
         "  df = df.drop(cols_to_drop, axis=1)\n",
         "  return df\n",
         "\n",
         "df = wrangle(DATA_PATH + 'elections/bread_peace_voting.csv')"
       ],
-      "execution_count": 51,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['INCUMBENT_PARTY_CANDIDATE', 'OTHER_CANDIDATE']\n"
+            "DROPPED COLUMNS: ['INCUMBENT_PARTY_CANDIDATE', 'OTHER_CANDIDATE']\n"
           ]
         }
       ]
@@ -463,20 +478,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bUbZ90eh1zBN",
-        "outputId": "9fee9f1c-2821-4b13-e80f-f65d2bd2b685",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bUbZ90eh1zBN",
+        "outputId": "bb6f2835-d0d1-4842-c194-a4f04727ccd8"
       },
       "source": [
         "print(list(df.columns)); print()\n",
         "\n",
         "print(df.nunique()); print()\n",
         "\n",
-        "print(df.info()); print()"
+        "#print(df.head()); print()\n",
+        "\n",
+        "#print(df.info()); print()"
       ],
-      "execution_count": 49,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,21 +505,26 @@
             "US_MILITARY_FATALITIES_PER_MILLION            8\n",
             "INCUMBENT_PARTY_VOTE_SHARE                   17\n",
             "dtype: int64\n",
-            "\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 17 entries, 1952 to 2016\n",
-            "Data columns (total 3 columns):\n",
-            " #   Column                                     Non-Null Count  Dtype  \n",
-            "---  ------                                     --------------  -----  \n",
-            " 0   AVERAGE_RECENT_GROWTH_IN_PERSONAL_INCOMES  17 non-null     float64\n",
-            " 1   US_MILITARY_FATALITIES_PER_MILLION         17 non-null     int64  \n",
-            " 2   INCUMBENT_PARTY_VOTE_SHARE                 17 non-null     float64\n",
-            "dtypes: float64(2), int64(1)\n",
-            "memory usage: 544.0 bytes\n",
-            "None\n",
             "\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I6C3HacLCHTi"
+      },
+      "source": [
+        "If a model performs well on unseen data (the testing set), it is said to be **generalized**\n",
+        "\n",
+        "**Overfitting** is when a **complex model** is being perfectly matched to the data, giving **low bias** and **high variance**\n",
+        "\n",
+        "**Underfitting** is when a **simple model** is being roughly approximated to the data, giving **high bias** but **low variance**\n",
+        "\n",
+        "**BIAS** the degree of matching to the data set\n",
+        "\n",
+        "**VARIANCE** in how much the model changes when trained on different subsets of your data set"
       ]
     },
     {
@@ -522,9 +544,13 @@
         "id": "8m9W00DPo9Vp"
       },
       "source": [
-        ""
+        "#THIS SHORTCUT REQUIRES PROPER WRANGLING\n",
+        "target = 'INCUMBENT_PARTY_VOTE_SHARE'\n",
+        "y = df[target]\n",
+        "X = df.drop(columns=target)\n",
+        "#X = df.drop(target,axis=1) #Alternative Method"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -538,7 +564,8 @@
         "Two strategies:\n",
         "\n",
         "- Random train-test split using [`train_test_split`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html). Generally we use 80% of the data for training, and 20% of the data for testing.\n",
-        "- If you have **timeseries**, then you need to do a \"cutoff\" split."
+        "- If you have **timeseries**, then you need to do a \"cutoff\" split.\n",
+        "  * We want our train/test splits to preserve temporal order so that the model can demonstrate future prediction"
       ]
     },
     {
@@ -547,9 +574,17 @@
         "id": "RJqL21ur3sDm"
       },
       "source": [
-        ""
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "percentage_to_save_for_testing = 0.2\n",
+        "\n",
+        "#RANDOM SPLIT\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+        "                test_size=percentage_to_save_for_testing)\n",
+        "\n",
+        "#CUTOFF SPLIT (used for time series)"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
