--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -136,17 +136,11 @@
         "    #Declaring Subjective Wrangling Constants\n",
         "    high_cardinality_percentage_threshold = 0.1\n",
         "    max_cat = 5 #Max Unique Count to be Autoclassified as Categorical\n",
-        "    ith_identifier_as_index = -1 #0-indexed, set as -1 to not change index\n",
         "\n",
-        "    #Column Classification Lists (initialize as needed)\n",
+        "    #Column Classification Lists\n",
         "    date_cols = ['CREATED']\n",
-        "    categorical_cols = [] #Most Will Be Automatically Detected\n",
-        "\n",
-        "    #Column Classifications (no initialization needed)\n",
-        "    numerical_cols = []\n",
-        "    high_card_cols = []\n",
-        "    single_value_cols = []\n",
-        "    identifier_cols = []\n",
+        "    categorical_cols = []\n",
+        "    numerical_cols = [] \n",
         "\n",
         "    for col in df:\n",
         "\n",
@@ -165,41 +159,13 @@
         "      if( (col in categorical_cols) and (col in date_cols)):\n",
         "        df[col] = pd.to_datetime(df[col])\n",
         "\n",
-        "      #Find Indentifier Variables\n",
-        "      if ( (df[col].nunique() == df.shape[0]) and (col in categorical_cols) ):\n",
-        "        identifier_cols.append(col)\n",
-        "\n",
         "      #Find Columns With Only One Value\n",
         "      if df[col].nunique() == 1:\n",
         "        if ~(col in single_value_cols):\n",
         "          single_value_cols.append(col)\n",
-        "\n",
-        "      #Find Columns With High Cardinality (Categorical Variables With Too Many Categories)\n",
-        "      if ( (col in categorical_cols) and ~(col in identifier_cols) and\n",
-        "          (df[col].nunique() / df.shape[0] > high_cardinality_percentage_threshold) ):\n",
-        "        high_card_cols.append(col)\n",
-        "    \n",
-        "    #Set ith Identifier as New Index\n",
-        "    if len(identifier_cols) > 0 and ith_identifier_as_index != -1:\n",
-        "      df = df.set_index(identifier_cols[ith_identifier_as_index])\n",
-        "      print('New Index: ', identifier_cols[ith_identifier_as_index])\n",
-        "      identifier_cols.remove(identifier_cols[ith_identifier_as_index])\n",
-        "\n",
-        "    #Output Column Classifications\n",
-        "    # print('Numerical Cols:', numerical_cols)\n",
-        "    # print('Categorical Cols:', categorical_cols)\n",
-        "    # print()\n",
-        "    # print('Identifier Cols:', identifier_cols)\n",
-        "    # print('Single Valued Cols:', single_value_cols)\n",
-        "    # print('High Cardinality Cols:', high_card_cols)\n",
         "   \n",
         "    #Drop All Rows With Null Values\n",
         "    df = df.dropna(axis=0)\n",
-        "\n",
-        "    #Drop Columns\n",
-        "    cols_to_drop = single_value_cols + high_card_cols\n",
-        "    #print('Columns To Drop:', cols_to_drop)\n",
-        "    #df = df.drop(cols_to_drop, axis=1)\n",
         "\n",
         "    # Remove the most extreme 1% prices,\n",
         "    # the most extreme 1% latitudes, &\n",
@@ -227,7 +193,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e999biKpTxx_",
-        "outputId": "7a0bb053-849b-4664-e94a-3e9ac7e1c646"
+        "outputId": "ed2427d5-183f-4bb6-a95c-629cfb2d7a70"
       },
       "source": [
         "df['DISPLAY_ADDRESS'].nunique()"
@@ -253,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hcFEzWNLUXr7",
-        "outputId": "514bbd83-3e8c-460f-8ceb-71341cd3198f"
+        "outputId": "153369d8-3d5f-4baa-db1e-15acc880289e"
       },
       "source": [
         "df['STREET_ADDRESS'].nunique()"
@@ -325,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ke5jcBv-9m4o",
-        "outputId": "32af74f1-80c9-46b3-c5c4-d404ec3afa98"
+        "outputId": "7898a256-6cb3-4467-db6a-1d15fc4b279f"
       },
       "source": [
         "print(list(df.columns))"
@@ -348,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1fVQAhbyaHUK",
-        "outputId": "b48e5e55-c2e2-4c75-8727-a45a00be0ca8"
+        "outputId": "4563ff00-b454-495d-c42c-d7bbdd9126c0"
       },
       "source": [
         "# Conduct your exploratory data analysis here, \n",
@@ -500,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkxGqp6qaHUM",
-        "outputId": "ca59bbc7-0f6f-497a-fcdc-811ee6ee01d9"
+        "outputId": "68e9a4fb-8cea-46bf-e2c7-b82a37959896"
       },
       "source": [
         "y_pred_baseline = [ y_train.mean() ] * len(y_train)\n",
@@ -536,7 +502,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rae9OxSZaHUN",
-        "outputId": "84ade54e-2243-4d71-a584-e6c643a2e055"
+        "outputId": "480015a3-dc85-4359-980f-d2f5ce0533df"
       },
       "source": [
         "model = LinearRegression()\n",
@@ -575,7 +541,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T-8eHIbzaHUO",
-        "outputId": "26a6932f-59e2-4b0f-8b4b-146139ff1113"
+        "outputId": "ee805bd2-b97a-4c52-9fdd-38d4253275e8"
       },
       "source": [
         "training_mae = mae(y_train, model.predict(X_train))\n",
@@ -612,7 +578,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aqK1dTvzaHUO",
-        "outputId": "0fa3128b-43e8-4807-ce6d-706c70cb2d15"
+        "outputId": "2b4b3068-e473-4a1e-c259-3051057ff7a5"
       },
       "source": [
         "training_r2 = r2(y_train, model.predict(X_train))\n",
@@ -651,7 +617,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BYLw7elqaHUP",
-        "outputId": "23815676-ebbd-4213-95ca-b00b44b61a08"
+        "outputId": "c2e3606a-5793-496c-e82c-7a9a5bd2c52e"
       },
       "source": [
         "var = 'ABS COEF'\n",
