--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -156,7 +156,7 @@
         "    #Identify Borough as dtype object\n",
         "    df['BOROUGH'] = df['BOROUGH'].astype(object)\n",
         "\n",
-        "    #Boolean Mask Restrictions**************************************************\n",
+        "    #Dataset Restrictions*******************************************************\n",
         "\n",
         "    # In 100k - 2000k Price Range\n",
         "    mask = ( (df.loc[:]['SALE_PRICE'] >= 100000) \n",
