--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -105,9 +105,10 @@
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
-      "execution_count": 73,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -126,7 +127,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZ9Ae8KwfniT",
-        "outputId": "7395f111-df83-433c-da8e-f9e5a08f7ab5"
+        "outputId": "bb14f0dc-45e0-4384-8cb2-a8c85eb110d8"
       },
       "source": [
         "def wrangle(filepath):\n",
@@ -152,6 +153,11 @@
         "    #Convert String to Int\n",
         "    df['SALE_PRICE'] = (df['SALE_PRICE'].str.strip().str\n",
         "                        .replace('[$,\" \", \",\"]', '').astype(int) )\n",
+        "    \n",
+        "    #IF you wanted to convert zeroes to nulls (not efficient)\n",
+        "    # print(df[ df.loc[:]['SALE_PRICE']==0 ])\n",
+        "    # df.loc[df.loc[:]['SALE_PRICE'] == 0, \"SALE_PRICE\"] = np.NaN\n",
+        "    # print(df[ df.loc[:]['SALE_PRICE'].isnull() ])\n",
         "\n",
         "    #Identify Borough as dtype object\n",
         "    df['BOROUGH'] = df['BOROUGH'].astype(object)\n",
@@ -190,12 +196,42 @@
         "\n",
         "df = wrangle(filepath)"
       ],
-      "execution_count": 74,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "            BOROUGH              NEIGHBORHOOD  ... YEAR_BUILT  SALE_PRICE\n",
+            "SALE DATE                                      ...                       \n",
+            "2019-01-01        1                   CHELSEA  ...     2007.0           0\n",
+            "2019-01-01        3              BOROUGH PARK  ...     1931.0           0\n",
+            "2019-01-01        3                  CANARSIE  ...     1963.0           0\n",
+            "2019-01-01        3                  CANARSIE  ...     1963.0           0\n",
+            "2019-01-01        3                  CANARSIE  ...     1963.0           0\n",
+            "...             ...                       ...  ...        ...         ...\n",
+            "2019-04-30        3                  CANARSIE  ...     1955.0           0\n",
+            "2019-04-30        3              CONEY ISLAND  ...     1930.0           0\n",
+            "2019-04-30        3             DYKER HEIGHTS  ...     1940.0           0\n",
+            "2019-04-30        2  KINGSBRIDGE HTS/UNIV HTS  ...     2017.0           0\n",
+            "2019-04-30        2      PELHAM PARKWAY NORTH  ...     1970.0           0\n",
+            "\n",
+            "[6909 rows x 6 columns]\n",
+            "            BOROUGH              NEIGHBORHOOD  ... YEAR_BUILT  SALE_PRICE\n",
+            "SALE DATE                                      ...                       \n",
+            "2019-01-01        1                   CHELSEA  ...     2007.0         NaN\n",
+            "2019-01-01        3              BOROUGH PARK  ...     1931.0         NaN\n",
+            "2019-01-01        3                  CANARSIE  ...     1963.0         NaN\n",
+            "2019-01-01        3                  CANARSIE  ...     1963.0         NaN\n",
+            "2019-01-01        3                  CANARSIE  ...     1963.0         NaN\n",
+            "...             ...                       ...  ...        ...         ...\n",
+            "2019-04-30        3                  CANARSIE  ...     1955.0         NaN\n",
+            "2019-04-30        3              CONEY ISLAND  ...     1930.0         NaN\n",
+            "2019-04-30        3             DYKER HEIGHTS  ...     1940.0         NaN\n",
+            "2019-04-30        2  KINGSBRIDGE HTS/UNIV HTS  ...     2017.0         NaN\n",
+            "2019-04-30        2      PELHAM PARKWAY NORTH  ...     1970.0         NaN\n",
+            "\n",
+            "[6909 rows x 6 columns]\n",
             "Columns Dropped:  ['NEIGHBORHOOD', 'BUILDING_CLASS_CATEGORY']\n"
           ]
         }
