--- a/DS_Sprint_Challenge_21.ipynb
+++ b/DS_Sprint_Challenge_21.ipynb
@@ -155,6 +155,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "m5jxkwYwiKtl"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -174,7 +186,6 @@
       },
       "source": [
         "'''T1: Import data into DataFrame `df`.'''\n",
-        "import pandas as pd\n",
         "url_train = 'https://drive.google.com/uc?export=download&id=1tmYLQ1RwIgjI_d66PWnlXU-5D_VxtiQc'\n",
         "\n",
         "def wrangle(filepath):\n",
