--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "**Task 3:** Choose one feature from the dataset and assign it to your feature matrix `X`. Then assign the column `'price'` to the target vector `y`.\n",
     "\n",
-    "**Remember:** Your feature matrix needs to be two-dimensional, but your feature matrix must be one-dimensional."
+    "**Remember:** Your feature matrix needs to be two-dimensional, but your target vector must be one-dimensional."
    ]
   },
   {
