update_sprint_challenge
Updated sprint challenge instructions to reflect current sklearn library changes

--- a/sprint_challenge/DS_Sprint_Challenge_21.ipynb
+++ b/sprint_challenge/DS_Sprint_Challenge_21.ipynb
@@ -615,6 +615,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -637,7 +638,7 @@
     "- A `StandardScaler` so that you can compare your model coefficients after training.\n",
     "- A `pipeline` that combines transformers and predictor.\n",
     "\n",
-    "**Tip:** If you combine a `StandardScaler` transformer with a `Ridge` predictor, you should set the `normalize` argument for the latter to `False`."
+    "**Tip:** For your `Ridge` model, the `alpha` parameter should be set to a value of your choosing. Read more about the `alpha` parameter [here](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Ridge.html)"
    ]
   },
   {
