--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "# If you're on Colab:\n",
     "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
+    "    DATA_PATH = 'https://github.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/tree/master/data'\n",
     "\n",
     "# If you're working locally:\n",
     "else:\n",
