updates gp notes

--- a/module2-regression-2/JDS_SHR_212_guided_project_notes.ipynb
+++ b/module2-regression-2/JDS_SHR_212_guided_project_notes.ipynb
@@ -58,8 +58,7 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import sys"
+    "import pandas as pd"
    ],
    "execution_count": 2,
    "outputs": []
@@ -70,13 +69,7 @@
     "id": "E5WTvJFCWQjx"
    },
    "source": [
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Applied-Modeling/master/data/'\n",
-    "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'"
+    "DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Applied-Modeling/master/data/'"
    ],
    "execution_count": null,
    "outputs": []
@@ -763,7 +756,7 @@
     "id": "2MvyQ2JOapLW"
    },
    "source": [
-    "print('The interecept of our model is:',)"
+    "print('The interecept of our model is:',)\n"
    ],
    "execution_count": null,
    "outputs": []
